# roguelike

./: .gitignore  Cargo.toml  README.md  RESULTS
.claude/agents/: feature-builder.md
assets/: minirogue-all.tsj  minirogue-all.tsx
src/: actions.rs  active_ai_tracker.rs  app.rs  audio.rs  camera.rs  components.rs  constants.rs  dungeon_gen.rs  events.rs  fov.rs  game.rs  game_loop.rs  grid.rs  input.rs  main.rs  multi_tileset.rs  pathfinding.rs  queries.rs  renderer.rs  spatial_cache.rs  spawning.rs  systems.rs  tile.rs  tileset.rs  time_system.rs  ui.rs  vfx.rs
src/constants/: abilities.rs  animation.rs  camera.rs  combat.rs  dungeon.rs  effects.rs  enemies.rs  gameplay.rs  items.rs  mod.rs  time.rs  ui.rs
src/engine/: dev_spawning.rs  floor_transition.rs  game_state.rs  initialization.rs  mod.rs  simulation.rs
src/render/: mod.rs
src/systems/: action_dispatch.rs  actions.rs  ai.rs  animation.rs  combat.rs  dev_tools.rs  dialogue.rs  effects.rs  experience.rs  inventory.rs  item_defs.rs  items.rs  mod.rs  movement.rs  player_input.rs  projectile.rs  rendering.rs
src/ui/: ability_bar.rs  dev_menu.rs  dialogue.rs  icons.rs  inventory.rs  loot_window.rs  mod.rs  shop_window.rs  start_screen.rs  status_bar.rs  style.rs  targeting.rs  vfx.rs
