[package]
name = "grid-roguelike"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grid-roguelike"
path = "src/main.rs"

[dependencies]
winit = "0.30"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
glow = "0.14"
egui = "0.29"
egui_glow = { version = "0.29", features = ["winit"] }
hecs = "0.10"
glam = "0.29"
noise = "0.9"
rand = "0.8"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
